# beads-tui

./: .gitignore  LICENSE  pyproject.toml
.beads/: issues.jsonl
.beads/dolt/beads/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
beads_tui/: __init__.py  __main__.py  app.py  bd_client.py  models.py
beads_tui/mixins/: live_reload.py
beads_tui/screens/: __init__.py  create_screen.py  detail_screen.py  help_screen.py
beads_tui/styles/: app.tcss
beads_tui/widgets/: filter_bar.py  priority_picker.py  status_bar.py  status_picker.py  text_input_modal.py
